fix db connection

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 PORT=3000
 
-DATABASE_URL=mongodb://localhost:27017/chat-app
+DATABASE_URL=mongodb+srv://johnmounir103:john1103@cluster0.nzrn9db.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET=polaMounir103@gmail.com
 JWT_ACCESS_EXPIRES_IN=15d
