--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "chating-server",
   "version": "1.0.0",
   "description": "chat server ",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+
   },
   "author": "Pola Mounir",
   "license": "ISC",
